# yzu-cluster

./: .audit-c11-trigger  .gitignore  ACADEMIC_BRIDGE.md  BEST_PRACTICE_TRADING.md  CLAUDE.md  INTELLIGENCE_TO_TRADING.md  LIVE_TRADING_CHECKLIST.md  MARKET_EXPANSION.md  Makefile  PAPER_TRADING.md  README.md  REDDIT_SIGNALS.md  RESEARCH_LOOP_STATUS.md  RUN_SIGNAL_GENERATOR.md  SIGNAL_READINESS.md  X_SIGNALS.md  config.yaml  handoff.md  handoff2.md  index.html  main.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  vite.config.js
.github/: synthesis-graph-scope-2.md  synthesis-graph-scope.md
From-refinitiv/: 1_Ticker_Metadata (1).csv  2_Supply_Chain_Edges (1).csv  2_Supply_Chain_Edges_Proxy.csv  3_Market_Panel_Advanced.csv  3_Market_Panel_Data (1).csv  4_Coverage_Quality_Check.csv  4_Coverage_Snapshot (1).csv  DATA_2_Global_Crypto_Macro.csv  DATA_4_SupplyChain_Network.csv  PATCH_Global_2330_TW.csv  PATCH_Global_BTC_PRICE_ONLY.csv  PATCH_Global_NVDA_O.csv  PATCH_Global_XAU_PRICE_ONLY.csv  PATCH_Global__TWII.csv  manifest.md  mass_hoard_sentiment.csv  mass_hoard_volatility.csv
alpha/: README.md
api/: __init__.py  main.py
backtests/: __init__.py  run_backtest.py  run_backtest_ls.py
config/: adaptive_aggression_inner.json  adaptive_aggression_protocol.json  alpha_fuel_manifest.json  coingecko_cluster_nodes.conf  crypto_robustness_off.json  crypto_robustness_on.json  settings.py  (+30 more)
high_perf/: Cargo.toml
high_perf/src/: error.rs  lib.rs  market_microstructure.rs  parallel_processing.rs  portfolio_optimization.rs  technical_indicators.rs
(+1324 files in other folders)
